Prevent showing horizontal scroll bar during animation

--- a/src/components/company-branding/company-branding.css
+++ b/src/components/company-branding/company-branding.css
@@ -9,6 +9,7 @@
     flex-wrap: wrap;
     row-gap: 10px;
     column-gap: 40px;
+    overflow: hidden;
 }
 
 @media screen and (min-width: 693px) {
